<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">shareSDK</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>

    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_pwd">密码</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="laiwang">来往</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="alipay">支付宝好友</string>

    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>

    <string name="sina_success">新浪微博分享成功</string>
    <string name="wechat_friend_success">微信好友分享成功</string>
    <string name="wechat_moment_success">朋友圈分享成功</string>
    <string name="wechat_favrite_success">微信收藏成功</string>
    <string name="qq_friend_success">QQ好友分享成功</string>
    <string name="qq_zone_success">QQ空间分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_fail">分享失败</string>

    <string name="cancel_">取消</string>

</resources>
